--- a/js&ts-essential/index.html
+++ b/js&ts-essential/index.html
@@ -12,6 +12,6 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script src="app.ts" type="module"></script>
+    <script src="src/app.ts" type="module"></script>
 </body>
 </html>
